--- a/build.yaml
+++ b/build.yaml
@@ -17,4 +17,8 @@
 #     cmake-args: -DCONFIG_ZMK_STUDIO=y
 #     artifact-name: corne_left_with_studio
 #
----
+board: [ "kitsune" ]
+include:
+  - board: kitsune
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
