--- a/build.yaml
+++ b/build.yaml
@@ -18,7 +18,7 @@
 #     artifact-name: corne_left_with_studio
 #
 board: [ "kitsune" ]
-include:
-  - board: kitsune
-    snippet: studio-rpc-usb-uart
-    cmake-args: -DCONFIG_ZMK_STUDIO=y
+#include:
+#  - board: kitsune
+#    snippet: studio-rpc-usb-uart
+#    cmake-args: -DCONFIG_ZMK_STUDIO=y
