--- a/dts/layouts/kitsune/tsangan.dtsi
+++ b/dts/layouts/kitsune/tsangan.dtsi
@@ -4,7 +4,7 @@
 / {
     layout_kitsune_tsangan: layout_kitsune_tsangan {
         compatible = "zmk,physical-layout";
-        display-name = "40% Kitsune";
+        display-name = "Tsangan";
 
         keys  //                     w   h    x    y     rot    rx    ry
             = <&key_physical_attrs 100 100    0    0       0     0     0>
