--- a/dts/layouts/kitsune/extra/R1.dtsi
+++ b/dts/layouts/kitsune/extra/R1.dtsi
@@ -8,6 +8,16 @@ Default
             , <&key_physical_attrs 125 100  900  300       0     0     0>
             , <&key_physical_attrs 125 100 1025  300       0     0     0>
             , <&key_physical_attrs 125 100 1150  300       0     0     0>
+CKL
+
+            , <&key_physical_attrs 125 100  125  300       0     0     0>
+            , <&key_physical_attrs 125 100  250  300       0     0     0>
+            , <&key_physical_attrs 125 100  375  300       0     0     0>
+            , <&key_physical_attrs 275 100  500  300       0     0     0>
+            , <&key_physical_attrs 125 100  775  300       0     0     0>
+            , <&key_physical_attrs 125 100  900  300       0     0     0>
+            , <&key_physical_attrs 125 100 1025  300       0     0     0>
+
 Tsangan
             , <&key_physical_attrs 150 100    0  300       0     0     0>
             , <&key_physical_attrs 100 100  150  300       0     0     0>
