add board to Kconfig.defconfig, use 48Mhz clock

--- a/boards/arm/kitsune/kitsune_defconfig
+++ b/boards/arm/kitsune/kitsune_defconfig
@@ -1,7 +1,8 @@
+CONFIG_BOARD_KITSUNE=y
 CONFIG_SOC_SERIES_STM32F0X=y
 CONFIG_SOC_STM32F072XB=y
-# 72MHz system clock
-CONFIG_SYS_CLOCK_HW_CYCLES_PER_SEC=72000000
+# 48MHz system clock
+CONFIG_SYS_CLOCK_HW_CYCLES_PER_SEC=48000000
 
 # enable GPIO
 CONFIG_GPIO=y
@@ -11,5 +12,8 @@ CONFIG_PINCTRL=y
 
 # clock configuration
 CONFIG_CLOCK_CONTROL=y
+
+# Needed to reduce this to size that will fit on F072 more easily
+CONFIG_ISR_STACK_SIZE=1024
 
 CONFIG_ZMK_USB=y
