--- a/boards/arm/kitsune/kitsune.dts
+++ b/boards/arm/kitsune/kitsune.dts
@@ -71,11 +71,15 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3)         RC(3,5)         RC(3,7) RC(3,8)         
     status = "okay";
 };
 
-&pll {
+&clk_hsi48 {
     status = "okay";
+};
+
+&pll {
     prediv = <1>;
     mul = <6>;
     clocks = <&clk_hsi>;
+    status = "okay";
 };
 
 &rcc {
@@ -83,6 +87,11 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3)         RC(3,5)         RC(3,7) RC(3,8)         
     clock-frequency = <DT_FREQ_M(48)>;
     ahb-prescaler = <1>;
     apb1-prescaler = <1>;
+};
+
+
+&rtc {
+    status = "okay";
 };
 
 zephyr_udc0: &usb {
