--- a/boards/arm/kitsune/kitsune_defconfig
+++ b/boards/arm/kitsune/kitsune_defconfig
@@ -1,4 +1,4 @@
-CONFIG_BOARD_KITSUNE=y
+#CONFIG_BOARD_KITSUNE=y
 CONFIG_SOC_SERIES_STM32F0X=y
 CONFIG_SOC_STM32F072XB=y
 # 48MHz system clock
@@ -15,5 +15,7 @@ CONFIG_CLOCK_CONTROL=y
 
 # Needed to reduce this to size that will fit on F072 more easily
 CONFIG_ISR_STACK_SIZE=1024
+
+CONFIG_ZMK_KSCAN_MATRIX_POLLING=y
 
 CONFIG_ZMK_USB=y
