--- a/boards/arm/kitsune/kitsune_defconfig
+++ b/boards/arm/kitsune/kitsune_defconfig
@@ -1,6 +1,7 @@
-#CONFIG_BOARD_KITSUNE=y
+CONFIG_BOARD_KITSUNE=y
 CONFIG_SOC_SERIES_STM32F0X=y
 CONFIG_SOC_STM32F072XB=y
+
 # 48MHz system clock
 CONFIG_SYS_CLOCK_HW_CYCLES_PER_SEC=48000000
 
