--- a/boards/arm/kitsune/kitsune_defconfig
+++ b/boards/arm/kitsune/kitsune_defconfig
@@ -15,6 +15,7 @@ CONFIG_PINCTRL=y
 CONFIG_CLOCK_CONTROL=y
 
 # Needed to reduce this to size that will fit on F072 more easily
+CONFIG_HEAP_MEM_POOL_SIZE=1024
 CONFIG_ISR_STACK_SIZE=1024
 
 # ZMK settings
