omit zmk memory reduction settings test

--- a/boards/arm/kitsune/kitsune_defconfig
+++ b/boards/arm/kitsune/kitsune_defconfig
@@ -43,10 +43,10 @@ CONFIG_USB_CDC_ACM_RINGBUF_SIZE=128
 CONFIG_USB_WORKQUEUE_STACK_SIZE=756
 
 # ZMK Memory Reduction Settings
-CONFIG_ZMK_BEHAVIOR_HOLD_TAP_MAX_HELD=3
-CONFIG_ZMK_BEHAVIOR_HOLD_TAP_MAX_CAPTURED_EVENTS=10
-CONFIG_ZMK_BEHAVIOR_STICKY_KEY_MAX_HELD=3
-CONFIG_ZMK_BEHAVIORS_QUEUE_SIZE=8
-CONFIG_ZMK_COMBO_MAX_PRESSED_COMBOS=1
-CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=1
-CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=2
+#CONFIG_ZMK_BEHAVIOR_HOLD_TAP_MAX_HELD=3
+#CONFIG_ZMK_BEHAVIOR_HOLD_TAP_MAX_CAPTURED_EVENTS=10
+#CONFIG_ZMK_BEHAVIOR_STICKY_KEY_MAX_HELD=3
+#CONFIG_ZMK_BEHAVIORS_QUEUE_SIZE=8
+#CONFIG_ZMK_COMBO_MAX_PRESSED_COMBOS=1
+#CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=1
+#CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=2
