remove boot retention

--- a/boards/arm/kitsune/kitsune_defconfig
+++ b/boards/arm/kitsune/kitsune_defconfig
@@ -2,14 +2,14 @@ CONFIG_BOARD_KITSUNE=y
 CONFIG_SOC_SERIES_STM32F0X=y
 CONFIG_SOC_STM32F072XB=y
 
-# Enable clock
+# Setup clock
 CONFIG_CLOCK_CONTROL=y
 CONFIG_SYS_CLOCK_HW_CYCLES_PER_SEC=48000000
 
-# Enable GPIO
+# Setup GPIO
 CONFIG_GPIO=y
 
-# Enable pinctrl
+# Setup pinctrl
 CONFIG_PINCTRL=y
 
 # Needed to reduce this to size that will fit on F072 more easily
@@ -22,9 +22,9 @@ CONFIG_ZMK_USB=y
 CONFIG_ZMK_STUDIO=y
 
 # Boot Retention Settings
-CONFIG_RETAINED_MEM=y
-CONFIG_RETENTION=y
-CONFIG_RETENTION_BOOT_MODE=y
+#CONFIG_RETAINED_MEM=y
+#CONFIG_RETENTION=y
+#CONFIG_RETENTION_BOOT_MODE=y
 
 # ZMK Studio Settings
 CONFIG_ZMK_BEHAVIOR_LOCAL_ID_TYPE_CRC16=y
