remove some memory reduction

--- a/boards/arm/kitsune/kitsune_defconfig
+++ b/boards/arm/kitsune/kitsune_defconfig
@@ -27,9 +27,9 @@ CONFIG_FLASH_MAP=y
 CONFIG_NVS=y
 
 # Zephyr Memory Reduction Settings
-CONFIG_KERNEL_MEM_POOL=n
-CONFIG_HEAP_MEM_POOL_SIZE=0
-CONFIG_IDLE_STACK_SIZE=128
+#CONFIG_KERNEL_MEM_POOL=n
+#CONFIG_HEAP_MEM_POOL_SIZE=0
+#CONFIG_IDLE_STACK_SIZE=128
 CONFIG_ISR_STACK_SIZE=756
 CONFIG_MAIN_STACK_SIZE=756
 CONFIG_USB_CDC_ACM_RINGBUF_SIZE=128
