add id_type, remove acm

--- a/boards/arm/kitsune/kitsune_defconfig
+++ b/boards/arm/kitsune/kitsune_defconfig
@@ -18,7 +18,7 @@ CONFIG_ZMK_USB=y
 CONFIG_ZMK_STUDIO=y
 
 # ZMK Studio Settings
-#CONFIG_ZMK_BEHAVIOR_LOCAL_ID_TYPE_CRC16=y
+CONFIG_ZMK_BEHAVIOR_LOCAL_ID_TYPE_CRC16=y
 CONFIG_ZMK_STUDIO_RPC_THREAD_STACK_SIZE=2048
 CONFIG_ZMK_STUDIO_RPC_TX_BUF_SIZE=32
 CONFIG_ZMK_KEYMAP_LAYER_NAME_MAX_LEN=10
