--- a/boards/arm/kitsune/kitsune.dts
+++ b/boards/arm/kitsune/kitsune.dts
@@ -2,6 +2,7 @@
 #include "kitsune.dtsi"
 #include <dt-bindings/zmk/matrix_transform.h>
 #include <layouts/kitsune/default.dtsi>
+#include <layouts/kitsune/tsangan.dtsi>
 
 / {
     model = "Kitsune";
@@ -54,5 +55,9 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3)         RC(3,5)         RC(3,7) RC(3,8)         
 };
 
 &layout_kitsune_default {
+    transform = <&default_transform>;
+};
+
+&layout_tsangan_default {
     transform = <&default_transform>;
 };
