--- a/boards/arm/kitsune/kitsune.dts
+++ b/boards/arm/kitsune/kitsune.dts
@@ -58,6 +58,6 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3)         RC(3,5)         RC(3,7) RC(3,8)         
     transform = <&default_transform>;
 };
 
-&layout_tsangan_default {
+&layout_kitsune_tsangan {
     transform = <&default_transform>;
 };
