add boot retention

--- a/boards/arm/kitsune/kitsune_defconfig
+++ b/boards/arm/kitsune/kitsune_defconfig
@@ -26,6 +26,11 @@ CONFIG_FLASH=y
 CONFIG_FLASH_MAP=y
 CONFIG_NVS=y
 
+# Boot Retention Settings
+CONFIG_RETAINED_MEM=y
+CONFIG_RETENTION=y
+CONFIG_RETENTION_BOOT_MODE=y
+
 # Zephyr Memory Reduction Settings
 CONFIG_KERNEL_MEM_POOL=n
 CONFIG_HEAP_MEM_POOL_SIZE=0
@@ -36,10 +41,10 @@ CONFIG_USB_CDC_ACM_RINGBUF_SIZE=128
 CONFIG_USB_WORKQUEUE_STACK_SIZE=756
 
 # ZMK Memory Reduction Settings
-#CONFIG_ZMK_BEHAVIOR_HOLD_TAP_MAX_HELD=3
-#CONFIG_ZMK_BEHAVIOR_HOLD_TAP_MAX_CAPTURED_EVENTS=10
-#CONFIG_ZMK_BEHAVIOR_STICKY_KEY_MAX_HELD=3
-#CONFIG_ZMK_BEHAVIORS_QUEUE_SIZE=8
-#CONFIG_ZMK_COMBO_MAX_PRESSED_COMBOS=1
-#CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=1
-#CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=2
+CONFIG_ZMK_BEHAVIOR_HOLD_TAP_MAX_HELD=3
+CONFIG_ZMK_BEHAVIOR_HOLD_TAP_MAX_CAPTURED_EVENTS=10
+CONFIG_ZMK_BEHAVIOR_STICKY_KEY_MAX_HELD=3
+CONFIG_ZMK_BEHAVIORS_QUEUE_SIZE=8
+CONFIG_ZMK_COMBO_MAX_PRESSED_COMBOS=1
+CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=1
+CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=2
