--- a/boards/arm/kitsune/kitsune.dtsi
+++ b/boards/arm/kitsune/kitsune.dtsi
@@ -35,6 +35,15 @@
     status = "okay";
 };
 
+zephyr_udc0: &usb {
+    status = "okay";
+    pinctrl-0 = <&usb_dm_pa11 &usb_dp_pa12>;
+    pinctrl-names = "default";
+
+    // Overridden to lower RAM usage.
+    num-bidir-endpoints = <4>;
+};
+
 &flash0 {
     /*
      * For more information, see:
@@ -50,4 +59,35 @@
             reg = <0x0001e800 0x00001800>;
         };
     };
+};
+
+/ {
+    sram@20003FFF {
+        compatible = "zephyr,memory-region", "mmio-sram";
+        reg = <0x20003FFF 0x1>;
+        zephyr,memory-region = "RetainedMem";
+        status = "okay";
+
+        retainedmem {
+            compatible = "zephyr,retained-ram";
+            status = "okay";
+            #address-cells = <1>;
+            #size-cells = <1>;
+
+            retention0: retention@0 {
+                compatible = "zephyr,retention";
+                status = "okay";
+                reg = <0x0 0x1>;
+            };
+        };
+    };
+
+    chosen {
+        zephyr,boot-mode = &retention0;
+    };
+};
+
+/* Reduce SRAM0 usage by 1 byte to account for non-init area */
+&sram0 {
+    reg = <0x20000000 0x3FFF>;
 };
