--- a/boards/arm/kitsune/kitsune.dts
+++ b/boards/arm/kitsune/kitsune.dts
@@ -2,6 +2,10 @@
 #include "kitsune.dtsi"
 #include <dt-bindings/zmk/matrix_transform.h>
 #include <layouts/kitsune/default.dtsi>
+#include <layouts/kitsune/ckl.dtsi>
+#include <layouts/kitsune/tsangan.dtsi>
+#include <layouts/kitsune/wkl.dtsi>
+#include <layouts/kitsune/hhkb.dtsi>
 
 / {
     model = "Kitsune";
@@ -40,7 +44,7 @@
             ;
     };
 
-    default_transform: keymap_transform_0 {
+    full_transform: keymap_transform_0 {
         compatible = "zmk,matrix-transform";
         columns = <12>;
         rows = <4>;
@@ -51,8 +55,46 @@ RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5) RC(2,6) RC(2,7) RC(2,8) RC(2,9) 
 RC(3,0) RC(3,1) RC(3,2) RC(3,3)         RC(3,5)         RC(3,7) RC(3,8)         RC(3,10) RC(3,11)
         >;
     };
+
+    ckl_transform: keymap_transform_0 {
+        compatible = "zmk,matrix-transform";
+        columns = <12>;
+        rows = <4>;
+        map = <
+RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5) RC(0,6) RC(0,7) RC(0,8) RC(0,9) RC(0,10) RC(0,11)
+RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4) RC(1,5) RC(1,6) RC(1,7) RC(1,8) RC(1,9) RC(1,10) RC(1,11)
+RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5) RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10) RC(2,11)
+        RC(3,1) RC(3,2) RC(3,3)         RC(3,5)         RC(3,7) RC(3,8)         RC(3,10)
+        >;
+    };
+
+    wkl_transform: keymap_transform_0 {
+        compatible = "zmk,matrix-transform";
+        columns = <12>;
+        rows = <4>;
+        map = <
+RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5) RC(0,6) RC(0,7) RC(0,8) RC(0,9) RC(0,10) RC(0,11)
+RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4) RC(1,5) RC(1,6) RC(1,7) RC(1,8) RC(1,9) RC(1,10) RC(1,11)
+RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5) RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10) RC(2,11)
+RC(3,0)         RC(3,2) RC(3,3)         RC(3,5)         RC(3,7) RC(3,8)                  RC(3,11)
+        >;
+    };
 };
 
 &layout_kitsune_default {
-    transform = <&default_transform>;
+    transform = <&full_transform>;
+};
+
+&layout_kitsune_ckl {
+    transform = <&ckl_transform>;
+};
+&layout_kitsune_tsangan {
+    transform = <&full_transform>;
+};
+
+&layout_kitsune_wkl {
+    transform = <&wkl_transform>;
+};
+&layout_kitsune_hhkb {
+    transform = <&ckl_transform>;
 };
