--- a/boards/arm/kitsune/kitsune_defconfig
+++ b/boards/arm/kitsune/kitsune_defconfig
@@ -18,7 +18,7 @@ CONFIG_ZMK_USB=y
 
 # ZMK Studio Settings
 CONFIG_ZMK_BEHAVIOR_LOCAL_ID_TYPE_CRC16=y
-CONFIG_ZMK_STUDIO_RPC_THREAD_STACK_SIZE=2048
+CONFIG_ZMK_STUDIO_RPC_THREAD_STACK_SIZE=1024
 CONFIG_ZMK_STUDIO_RPC_TX_BUF_SIZE=32
 CONFIG_ZMK_KEYMAP_LAYER_NAME_MAX_LEN=10
 CONFIG_FLASH=y
@@ -29,10 +29,10 @@ CONFIG_NVS=y
 CONFIG_KERNEL_MEM_POOL=n
 CONFIG_HEAP_MEM_POOL_SIZE=0
 CONFIG_IDLE_STACK_SIZE=128
-CONFIG_ISR_STACK_SIZE=756
-CONFIG_MAIN_STACK_SIZE=756
+CONFIG_ISR_STACK_SIZE=512
+CONFIG_MAIN_STACK_SIZE=512
 CONFIG_USB_CDC_ACM_RINGBUF_SIZE=128
-CONFIG_USB_WORKQUEUE_STACK_SIZE=756
+CONFIG_USB_WORKQUEUE_STACK_SIZE=512
 
 # ZMK Memory Reduction Settings
 CONFIG_ZMK_BEHAVIOR_HOLD_TAP_MAX_HELD=3
@@ -42,3 +42,8 @@ CONFIG_ZMK_BEHAVIORS_QUEUE_SIZE=8
 CONFIG_ZMK_COMBO_MAX_PRESSED_COMBOS=1
 CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=1
 CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=2
+
+# Boot Retention Settings
+CONFIG_RETAINED_MEM=y
+CONFIG_RETENTION=y
+CONFIG_RETENTION_BOOT_MODE=y
